style: fixing layout shift and some other tweaks

--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -146,7 +146,6 @@ a {
 
 input[type=search]::-ms-clear { display: none; width : 0; height: 0; }
 input[type=search]::-ms-reveal { display: none; width : 0; height: 0; }
-
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
@@ -172,6 +171,8 @@ ul {
 
 /* setting up body */
 body {
+    min-height: 100.1vh;
+
     font-family: var(--ff-body);
     font-weight: var(--fw-body);
     font-size: var(--fs-body);
@@ -183,7 +184,7 @@ body {
 
 /* setting up app's root */
 [data-app-root] {
-    min-block-size: 100vh;
+    min-height: 100vh;
 }
 
 /* --------------- */
