--- a/src/layout/Header/Header.css
+++ b/src/layout/Header/Header.css
@@ -7,6 +7,5 @@
     justify-content: start;
     align-items: center;
     
-    inline-size: 100%;
     margin-block: var(--header-white-space);
 }
